--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+
+body ::-webkit-scrollbar {
+    width: 5px;
+}
+
+body ::-webkit-scrollbar-track {
+    width: 5px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body ::-webkit-scrollbar-thumb {
+    width: 5px;
+    background-color: darkgrey;
+    border-radius: 50px;
+}
